--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div>
+        <header>Header</header>
+        <section>
+            Section
+            <nav>Nav</nav>
+            <article>Article</article>
+        </section>
+        <footer>Footer</footer>
+    </div>
 </body>
 </html>
