--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style/style.css" type="text/css"/>
+    <title>PPF_Lab2</title>
 </head>
 <body>
     <div>
-        <header>Header</header>
+        <header>
+            <div>
+                <img src="img/logo.png" width="150" height="75" alt="Brak logo"/>
+            </div>
+            <h1>
+                Projektowanie i programowanie front0end, lab. 2-3
+            </h1>
+        </header>
         <section>
             Section
             <nav>Nav</nav>
