--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <img src="img/logo.png" width="150" height="75" alt="Brak logo"/>
             </div>
             <h1>
-                Projektowanie i programowanie front0end, lab. 2-3
+                Projektowanie i programowanie front-end, lab. 2-3
             </h1>
         </header>
         <section>
@@ -102,9 +102,14 @@
                     </video>
                 </div>
             </article>
-            
+
         </section>
-        <footer>Footer</footer>
+        <footer>
+            <h4>
+                Autor: <i>Blanka Wójcik</i>. Politechnika Krakowska, 
+                Wydział Mechaniczny, Katedra Informatyki Stosowanej M07
+            </h4>
+        </footer>
     </div>
 </body>
 
