--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style/style.css" type="text/css"/>
@@ -96,7 +96,7 @@
                     </p>
                 </div>
                 <div>
-                    <h2 id="movie">Krótki film o rodzajach komputerów</h2>
+                    <h3 id="movie">Krótki film o rodzajach komputerów</h3>
                     <video width="512" controls>
                         <source src="img/movie.mp4" type="video/mp4"/>Brak obsługi video HTML
                     </video>
