--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                 <div id="computers">
                     <h2>Wybrane komponenty komputerowe</h2>
                 </div>
-                <div>
+                <div class="article_image">
                     <img src="img/img01.png" alt="Img 01" width="320" height="240" />
                 </div>
-                <div>
+                <div class="article_text">
                     <p>
                         Procesor (CPU) to jeden z najważniejszych podzespołów 
                         komputerowych. Jego zadaniem jest wymiana informacji między 
@@ -50,10 +50,10 @@
                         rdzeni.
                     </p>
                 </div>
-                <div>
+                <div class="article_image">
                     <img src="img/img02.png" alt="Img 02" width="320" height="240" />
                 </div>
-                <div>
+                <div class="article_text">
                     <p>
                         Router Wi-Fi to urządzenie sieciowe, które rozdziela sygnał 
                         internetowy. Pozwala na jednoczesne korzystanie z usług 
@@ -72,10 +72,10 @@
                         łącza (Neostrada TP, Netia Dialog).
                     </p>
                 </div>
-                <div>
+                <div class="article_image">
                     <img src="img/img03.png" alt="Img 03" width="320" height="240" />
                 </div>
-                <div>
+                <div class="article_text">
                     <p>
                         Karta graficzna, często też nazywana akceleratorem grafiki, 
                         to element komputera generujcy sygnał wizyjny (obraz) dla 
