--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
 </head>
 <body>
     <div>
-        <header>
-            <div>
+        <div class="header container">
+            <div class="headeritem logo">
                 <img src="img/logo.png" width="150" height="75" alt="Brak logo"/>
             </div>
+            <div class="headeritem text">
             <h1>
-                Projektowanie i programowanie front-end, lab. 2-3
+                Projektowanie i programowanie front-end, lab. 2-3, flexbox
             </h1>
-        </header>
-        <section>
-            <nav>
+            </div>
+        </div>
+        <div class="main_container">
+            <div class="mainitem_nav">
                 <ul>
                     <li><a href="https://www.pk.edu.pl" target="_blank">Politechnika</a></li>
                     <li><a href="https://www.agh.edu.pl" target="_blank">AGH</a></li>
@@ -25,16 +27,17 @@
                     <li><a href="https://www.youtube.com/watch?v=GfXyn_2QnFo" target="_blank">Procesory</a></li>
                     <li><a href="#movie">Rodzaje komputerów</a></li>
                 </ul>
-            </nav>
-            <article>
+            </div>
+            <div class="mainitem_art">
                 <div id="computers">
                     <h2>Wybrane komponenty komputerowe</h2>
                 </div>
-                <div>
-                    <img src="img/img01.png" alt="Img 01" width="320" height="240" />
-                </div>
-                <div>
-                    <p>
+                <div class="item_art">
+                    <div class="item_art_img">
+                        <img src="img/img01.png" alt="Img 01" width="320" height="240" />
+                    </div>
+                    <div class="item_art_text">
+                        <p>
                         Procesor (CPU) to jeden z najważniejszych podzespołów 
                         komputerowych. Jego zadaniem jest wymiana informacji między 
                         urządzeniami wejścia-wyjścia, kartą graficzną czy pamięcią RAM 
@@ -48,13 +51,13 @@
                         technologii Hyper-Threading (HT), a procesory AMD - SMT. Obecne 
                         procesory Intel mają od 4 do 18 rdzeni, natomiast AMD od 4 do 16 
                         rdzeni.
-                    </p>
-                </div>
-                <div>
-                    <img src="img/img02.png" alt="Img 02" width="320" height="240" />
-                </div>
-                <div>
-                    <p>
+                        </p>
+                    </div>
+                    <div class="item_art_img">
+                        <img src="img/img02.png" alt="Img 02" width="320" height="240" />
+                    </div>
+                    <div class="item_art_text">
+                        <p>
                         Router Wi-Fi to urządzenie sieciowe, które rozdziela sygnał 
                         internetowy. Pozwala na jednoczesne korzystanie z usług 
                         internetowych z kilku komputerów, smatfonów, tabletów i 
@@ -70,13 +73,13 @@
                         ADSL są w stanie przetwarzać sygnał telefoniczny, dzięki czemu 
                         można korzystać z usług dostawców wykorzystujących ten rodzaj 
                         łącza (Neostrada TP, Netia Dialog).
-                    </p>
-                </div>
-                <div>
-                    <img src="img/img03.png" alt="Img 03" width="320" height="240" />
-                </div>
-                <div>
-                    <p>
+                        </p>
+                    </div>
+                    <div class="item_art_img">
+                        <img src="img/img03.png" alt="Img 03" width="320" height="240" />
+                    </div>
+                    <div class="item_art_text">
+                        <p>
                         Karta graficzna, często też nazywana akceleratorem grafiki, 
                         to element komputera generujcy sygnał wizyjny (obraz) dla 
                         monitora. Podstawowym zadaniem karty graficznej jest 
@@ -93,23 +96,23 @@
                         na analogowy sygnał sterujący dla monitora. Złącze umożliwia 
                         wymianę danych i sterowanie kartą graficzną - zazwyczaj używane są 
                         standardy PCI, AGP lub PCI-Express.
-                    </p>
+                        </p>
+                    </div>
+                    <div>
+                        <h3 id="movie">Krótki film o rodzajach komputerów</h3>
+                        <video width="512" controls>
+                            <source src="img/movie.mp4" type="video/mp4"/>Brak obsługi video HTML
+                        </video>
+                    </div>
                 </div>
-                <div>
-                    <h3 id="movie">Krótki film o rodzajach komputerów</h3>
-                    <video width="512" controls>
-                        <source src="img/movie.mp4" type="video/mp4"/>Brak obsługi video HTML
-                    </video>
-                </div>
-            </article>
-
-        </section>
-        <footer>
+            </div>
+        </div>
+        <div class="main_footer">
             <h4>
                 Autor: <i>Blanka Wójcik</i>. Politechnika Krakowska, 
                 Wydział Mechaniczny, Katedra Informatyki Stosowanej M07
             </h4>
-        </footer>
+        </div>
     </div>
 </body>
 
