--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <div>
-        <div class="header container">
-            <div class="headeritem logo">
+        <div class="header_container">
+            <div class="headeritem_logo">
                 <img src="img/logo.png" width="150" height="75" alt="Brak logo"/>
             </div>
-            <div class="headeritem text">
+            <div class="headeritem_text">
             <h1>
                 Projektowanie i programowanie front-end, lab. 2-3, flexbox
             </h1>
