--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
                 <img src="img/logo.png" width="150" height="75" alt="Brak logo"/>
             </div>
             <div class="headeritem_text">
-            <h1>
-                Projektowanie i programowanie front-end, lab. 2-3, flexbox
-            </h1>
+                <h1>Projektowanie i programowanie front-end, lab. 2-3, flexbox</h1>
             </div>
         </div>
         <div class="main_container">
@@ -53,6 +51,8 @@
                         rdzeni.
                         </p>
                     </div>
+                    </div>
+                    <div class="item_art">
                     <div class="item_art_img">
                         <img src="img/img02.png" alt="Img 02" width="320" height="240" />
                     </div>
@@ -75,6 +75,8 @@
                         łącza (Neostrada TP, Netia Dialog).
                         </p>
                     </div>
+                    </div>
+                    <div class="item_art">
                     <div class="item_art_img">
                         <img src="img/img03.png" alt="Img 03" width="320" height="240" />
                     </div>
@@ -98,15 +100,15 @@
                         standardy PCI, AGP lub PCI-Express.
                         </p>
                     </div>
+                    </div>
                     <div>
-                        <h3 id="movie">Krótki film o rodzajach komputerów</h3>
+                        <h2 id="movie">Krótki film o rodzajach komputerów</h2>
                         <video width="512" controls>
                             <source src="img/movie.mp4" type="video/mp4"/>Brak obsługi video HTML
                         </video>
                     </div>
                 </div>
             </div>
-        </div>
         <div class="main_footer">
             <h4>
                 Autor: <i>Blanka Wójcik</i>. Politechnika Krakowska, 
