--- a/index.html
+++ b/index.html
@@ -101,6 +101,124 @@
                         </p>
                     </div>
                     </div>
+                    <div class="item_art">
+                        <div class="item_art_img">
+                        <img src="img/img04.png" alt="Img 04" width="320" height="240"/>
+                        </div>
+                      <div class="item_art_text">
+                        <p>
+                          Mysz to urządzenie wskazujące używane podczas pracy z interfejsem 
+                          graficznym komputera. Umożliwia poruszanie kursorem po ekranie 
+                          komputera poprzez przesuwanie po płaskiej powierzchni. Mysz 
+                          odczytuje zmianę położenia względem podłoża, a po jego zamianie na 
+                          postać cyfrową komputer dokonuje zmiany położenia kursora myszy na 
+                          ekranie. Najczęściej wyposażona jest również w kółko do przewijania 
+                          ekranu. Dawniej mysz była podłączana do komputera PC przez port 
+                          RS232 lub PS/2, obecnie dominuje złącze USB lub połączenie 
+                          bezprzewodowe.Najstarszym typem myszy jest mysz mechaniczna, 
+                          w której wykorzystuje się metalową kulkę pokrytą gumą, oraz 
+                          system rolek. Nowszym rozwiązaniem jest tzw. mysz optyczna. 
+                          W podstawie ma zainstalowaną jedną lub więcej diod 
+                          elektroluminescencyjnych, które oświetlają powierzchnię pod 
+                          myszą, soczewkę ogniskującą, oraz matrycę CCD.
+                        </p>
+                      </div>
+                    </div>
+                    <div class="item_art">
+                        <div class="item_art_img">
+                        <img src="img/img05.png" alt="Img 05" width="320" height="240"/>
+                        </div>
+                      <div class="item_art_text">
+                        <p>
+                          Klawiatura komputerowa jest to uporządkowany zestaw klawiszy 
+                          służący do ręcznego sterowania urządzeniem lub ręcznego 
+                          wprowadzania danych. W zależności od spełnianej funkcji 
+                          klawiatura zawiera różnego rodzaju klawisze – alfabetyczne, 
+                          numeryczne, znaków specjalnych, funkcji specjalnych, o 
+                          znaczeniu definiowanym przez użytkownika. Aktualnie używane 
+                          modele klawiatur komputerowych mają około 100 klawiszy. Coraz 
+                          częściej w klawiatury komputerowe wbudowuje się dodatkowe 
+                          elementy sterujące (gładzik, dodatkowe przyciski, pokrętła, 
+                          suwaki i inne), kontrolne (diody LED) i inne (np. czytnik kart 
+                          pamięci, porty USB, gniazda do zestawu słuchawkowego) – 
+                          najczęściej do obsługi multimediów. 
+                        </p>
+                      </div>
+                    </div>
+                    <div class="item_art">
+                        <div class="item_art_img">
+                        <img src="img/img06.png" alt="Img 06" width="320" height="240"/>
+                        </div>
+                      <div class="item_art_text">
+                        <p>
+                          Płyta główna (ang. motherboard, mainboard) jest to komponent 
+                          urządzenia elektronicznego w postaci obwodu drukowanego, na 
+                          którym montuje się najważniejsze elementy. Umożliwia 
+                          komunikację pomiędzy wszystkimi pozostałymi komponentami i 
+                          modułami. W komputerze na płycie głównej znajdują się: 
+                          procesory, pamięć operacyjna lub gniazda do zainstalowania 
+                          tych urządzeń oraz gniazda do zainstalowania dodatkowych 
+                          płyt zwanych kartami rozszerzającymi (np. PCI), oraz gniazda 
+                          do urządzeń składujących (dyski twarde, napędy optyczne itp.), 
+                          złącze klawiatury i zasilacza. W niektórych konstrukcjach także 
+                          gniazda do innych urządzeń zewnętrznych, do których sprzęt 
+                          znajduje się na płycie głównej (port szeregowy, port równoległy, 
+                          USB).
+                        </p>
+                      </div>
+                    </div>
+                    <div class="item_art">
+                        <div class="item_art_img">
+                        <img src="img/img07.png" alt="Img 07" width="320" height="240"/>
+                        </div>
+                      <div class="item_art_text">
+                        <p>
+                          Pamięć RAM komputera jest to bardzo szybki nośnik, na którym 
+                          znajdują się informacje o działających programach i procesach 
+                          w systemie. W dużej mierze od parametrów RAM zależy wydajność 
+                          i szybkość działania komputera. Dobór odpowiedniej pojemności 
+                          oraz szybkości tego podzespołu opiera się na kilku aspektach. 
+                          Zwykle im więcej wymagających programów działa jednocześnie, 
+                          tym potrzeba większej ilości pamięci RAM. Płynna i stabilna 
+                          praca systemu jest uzależniona także od szybkości zapisu i 
+                          odczytu danych. Dziś używane są pamięci DDR 3 i DDR 4. 
+                          Nowoczesne technologie pozwalają również na znacznie 
+                          większe upakowanie pamięci na kostce o tej samej wielkości. 
+                          W ten sposób pojedynczy moduł RAM może mieć nawet 64 GB. W 
+                          standardzie DDR 3 moduły mają pojemność do 16 GB, przy 
+                          prędkości między 800 a 2400 MT/s (milionów transferów na 
+                          sekundę). Najnowszy rodzaj pamięci RAM, DDR 4, może mieć 
+                          pojemność do 64 GB, szybkość zapisu i odczytu sięga 3200 MT/s, 
+                          natomiast pobór energii jest o wiele niższy. 
+                         </p>
+                      </div>
+                    </div>
+                    <div class="item_art">
+                        <div class="item_art_img">
+                        <img src="img/img08.png" alt="Img 08" width="320" height="240"/>
+                        </div>
+                      <div class="item_art_text">
+                        <p>
+                          Monitor komputerowy to ogólna nazwa jednego z urządzeń 
+                          wyjścia do bezpośredniej komunikacji użytkownika z komputerem. 
+                          Zadaniem monitora jest wizualizacja wyników działania programów 
+                          uruchomionych na komputerze. Obecnie używane monitory to 
+                          ekrany komputerowe, obsługiwane przez komputer zwykle za 
+                          pośrednictwem karty graficznej, która jest elementem komputera 
+                          bądź może być wbudowana w sam monitor. Od momentu pojawienia 
+                          się domowych komputerów, do ich obsługi używane były monitory 
+                          CRT, lub nawet zwykłe telewizory oparte na tej samej 
+                          technologii. Od około 2005 roku rynek monitorów został 
+                          zdominowany przez monitory LCD, które nie wytwarzają tak 
+                          intensywnego pola elektromagnetycznego i zajmują wielokrotnie 
+                          mniej miejsca na biurkach. W najtańszych modelach sygnał jest 
+                          jednak nadal przesyłany analogowo przez złącze D-Sub. Bardziej 
+                          zaawansowane modele posiadają gniazda cyfrowe w standardzie DVI, 
+                          HDMI lub DisplayPort, które pozwalają uzyskać znacznie lepszą 
+                          jakość obrazu i wyższe rozdzielczości. 
+                        </p>
+                      </div>
+                    </div>
                     <div>
                         <h2 id="movie">Krótki film o rodzajach komputerów</h2>
                         <video width="512" controls>
