--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <title>PPF_Lab2</title>
 </head>
 <body>
-    <div>
-        <header>
+    <div class="main_page">
+        <div class="div_head">
             <div>
                 <img src="img/logo.png" width="150" height="75" alt="Brak logo"/>
             </div>
             <h1>
                 Projektowanie i programowanie front-end, lab. 2-3
             </h1>
-        </header>
+          </div>
         <section>
-            <nav>
+            <div class="div_nav">
                 <ul>
                     <li><a href="https://www.pk.edu.pl" target="_blank">Politechnika</a></li>
                     <li><a href="https://www.agh.edu.pl" target="_blank">AGH</a></li>
@@ -25,15 +25,15 @@
                     <li><a href="https://www.youtube.com/watch?v=GfXyn_2QnFo" target="_blank">Procesory</a></li>
                     <li><a href="#movie">Rodzaje komputerów</a></li>
                 </ul>
-            </nav>
+              </div>
             <article>
-                <div id="computers">
+                <div class="div_art_header" id="computers">
                     <h2>Wybrane komponenty komputerowe</h2>
                 </div>
-                <div>
+                <div class="div_art_img1">
                     <img src="img/img01.png" alt="Img 01" width="320" height="240" />
                 </div>
-                <div>
+                <div class="div_art_text1">
                     <p>
                         Procesor (CPU) to jeden z najważniejszych podzespołów 
                         komputerowych. Jego zadaniem jest wymiana informacji między 
@@ -50,10 +50,10 @@
                         rdzeni.
                     </p>
                 </div>
-                <div>
+                <div class="div_art_img2">
                     <img src="img/img02.png" alt="Img 02" width="320" height="240" />
                 </div>
-                <div>
+                <div class="div_art_text2">
                     <p>
                         Router Wi-Fi to urządzenie sieciowe, które rozdziela sygnał 
                         internetowy. Pozwala na jednoczesne korzystanie z usług 
@@ -72,10 +72,10 @@
                         łącza (Neostrada TP, Netia Dialog).
                     </p>
                 </div>
-                <div>
+                <div class="div_art_img3">
                     <img src="img/img03.png" alt="Img 03" width="320" height="240" />
                 </div>
-                <div>
+                <div class="div_art_text3">
                     <p>
                         Karta graficzna, często też nazywana akceleratorem grafiki, 
                         to element komputera generujcy sygnał wizyjny (obraz) dla 
@@ -95,8 +95,8 @@
                         standardy PCI, AGP lub PCI-Express.
                     </p>
                 </div>
-                <div>
-                    <h3 id="movie">Krótki film o rodzajach komputerów</h3>
+                <div class="div_art_video">
+                    <h2 id="movie">Krótki film o rodzajach komputerów</h2>
                     <video width="512" controls>
                         <source src="img/movie.mp4" type="video/mp4"/>Brak obsługi video HTML
                     </video>
@@ -104,12 +104,12 @@
             </article>
 
         </section>
-        <footer>
+        <div class="div_foot">
             <h4>
                 Autor: <i>Blanka Wójcik</i>. Politechnika Krakowska, 
                 Wydział Mechaniczny, Katedra Informatyki Stosowanej M07
             </h4>
-        </footer>
+          </div>
     </div>
 </body>
 
